# CHELATEDAI

./: .claude-team-status.json  .gitignore  .report.json  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  GITHUB_DESKTOP_INSTRUCTIONS.md  LICENSE  PR_DESCRIPTION.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  REFERENCES.md  SECURITY.md  SETUP_INSTRUCTIONS.md  TECHNICAL_ANALYSIS.md  adapter_router.py  adaptive_gate_orchestrator.py  aep_orchestrator.py  antigravity_components.py  antigravity_engine.py  benchmark_beir.py  benchmark_comparative.py  benchmark_distillation.py  benchmark_distillation_full_w50.json  benchmark_distillation_full_w80.json  benchmark_distillation_quick.json  benchmark_evolution.py  benchmark_multitask.py  benchmark_multitask_medium_full.json  benchmark_multitask_quick.json  benchmark_multitask_small_full.json  benchmark_rlm.py  benchmark_rlm_scifact_intersection.txt  benchmark_rlm_scifact_rrf.txt  benchmark_rlm_scifact_union.txt  benchmark_utils.py  checkpoint_manager.py  chelation_adapter.py  chelation_events.jsonl  (+117 more)
.github/workflows/: build_firmware.yml  test.yml
computational_storage_poc/: CHELATEDAI_integration_demo.py  README.md  block_graph.py  capture_hardware_evidence.py  compiler.py  mock_array.py  mock_nvme.py  payload_contract.py  run_all_tests.py  test_real_model.py  train_and_compile.py  usb_host_inference.py  validation_config.py
computational_storage_poc/emulation/: Dockerfile  docker-compose.yml  fuse_block_emulator.py  run_emulation.sh  validate_emulation_path.py  virtual_controller.py
computational_storage_poc/firmware/: BUILD_GUIDE.md  CMakeLists.txt  README_FIRMWARE.md  main.c  tusb_config.h  usb_descriptors.c
dashboard/: index.html
docs/: CLAUDE.md  COMPUTATIONAL_STORAGE_DRIVE_NODES.md  INDEX.md  MODULE_GUIDE.md  README.md  RESEARCH_TRACKS.md  SYSTEM_BLUEPRINT.md  agent-session-log-2026-02-16-phase4.md  agent-session-log-2026-02-16.md  architecture-2026-02-26-batch-teacher-encoding.md  architecture-2026-02-26-beir-evaluation.md  architecture-2026-02-26-cross-lingual-distillation.md  architecture-2026-02-26-online-correction-refinements.md  architecture-2026-02-26-topology-isomer-detection.md  cleanup-report-2026-02-27.md  computational-storage-hardware-evidence-runbook.md  computational-storage-retention-policy-2026-03-06.md  computational-storage-transport-scope-decision.md  current-research-eggroll-chelatedai-2026-04-27.md  distillation-experiment-protocol.md  eggroll-implementation-panel-review-2026-04-27.md  eggroll-strategic-analysis-plan-2026-04-27.md  evolution-strategies-hyperscale-chelatedai-analysis.md  feature-module-update-listing-2026-01-01-to-present.md  hybrid-distillation-research.md  live-fire-diagnostics-2026-04-27.md  llm-architecture-ai-engineering-adaptation-review-2026-04-27.md  packaging-evaluation-2026-02-27.md  phase4-experiment-protocol.md  pr-01-core-distillation.md  pr-02-tests.md  pr-03-research-docs.md  pr-drafts-README.md  proposed-trials-validation-round-2026-02-17.md  research-2026-02-21-molecular-structure-comparison.md  research-2026-02-26-sweep-analysis.md  research-2026-02-27-sweep-analysis.md  rlm-analysis.md  road-course-results-2026-04-27.md  roadmap-audit-and-weight-refinement-plan-2026-03-06.md  (+6 more)
docs/ARCH AGENTIC ENGINEERING AND PLANNING/: README.md  active-tracker-template.md  agent-learning.md  architecture-2026-02-17-f020-f024-remediation.md  architecture-2026-02-17-f025-f039-remediation.md  architecture-2026-02-17-f040-f045-remediation.md  architecture-2026-02-17-f046-f050-remediation.md  architecture-2026-02-18-f051-f055-remediation.md  architecture-2026-02-18-pr-closeout-orchestration.md  architecture-2026-02-18-top15-priority-implementation.md  architecture-2026-02-18-top15-priority-orchestration-session16.md  architecture-2026-02-18-top15-priority-orchestration-session17.md  architecture-2026-03-06-session26-emulation-ci.md  architecture-2026-03-06-session26-hardware-evidence-capture.md  architecture-2026-03-06-session26-retention-policy.md  architecture-2026-03-06-session26-transport-scope-lock.md  architecture-2026-03-06-session27-pr-review-merge.md  architecture-2026-03-07-session28-overnight-orchestration.md  architecture-2026-03-07-session28-stale-roadmap-cleanup.md  architecture-2026-03-07-session28-weight-refinement-campaign-recovery.md  architecture-2026-04-24-session32-pr-orchestration.md  backlog-2026-02-13.md  backlog-index.md  backlog-template.md  change-log.md  cycle-layout-template.md  cycle-summary-template.md  glossary.md  next-session.md  orchestrator-briefing.md  phase-planning.md  phase-summary-template.md  research-2026-02-17-f020-f024-implementation.md  research-2026-02-17-f025-f039-implementation.md  research-2026-02-17-f029-f034-f036-f037-f038-implementation.md  research-2026-02-17-f031-f032-f033-f035-f043-implementation.md  research-2026-02-17-f040-f045-implementation.md  (+62 more)
(+14 files in other folders)
