[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chelatedai"
version = "0.1.0"
description = "Adaptive vector search with self-correcting embeddings"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "sentence-transformers>=2.2",
    "qdrant-client>=1.7",
]

[project.optional-dependencies]
benchmark = ["mteb>=1.0"]
ollama = ["requests>=2.28"]
dev = ["ruff>=0.4", "httpx>=0.27"]

[tool.setuptools]
py-modules = [
    "aep_orchestrator",
    "antigravity_engine",
    "benchmark_comparative",
    "benchmark_distillation",
    "benchmark_evolution",
    "benchmark_multitask",
    "benchmark_rlm",
    "benchmark_utils",
    "checkpoint_manager",
    "chelation_adapter",
    "chelation_logger",
    "config",
    "convergence_monitor",
    "dashboard_server",
    "dimension_mask_predictor",
    "embedding_backend",
    "embedding_quality",
    "online_updater",
    "recursive_decomposer",
    "sedimentation",
    "sedimentation_trainer",
    "stability_tracker",
    "teacher_distillation",
    "teacher_weight_scheduler",
    "vector_store",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "W291", "W293", "W292"]
