[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chelatedai"
version = "0.1.0"
description = "Adaptive vector search with self-correcting embeddings"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "sentence-transformers>=2.2",
    "qdrant-client>=1.7",
    "scikit-learn>=1.5",
]

[project.scripts]
chelatedai-live-fire = "run_live_fire_diagnostics:main"
chelatedai-road-course = "run_road_course_campaign:main"
chelatedai-road-course-tuning = "run_road_course_tuning_loop:main"
chelatedai-thousand-query-tuning = "run_thousand_query_tuning:main"
chelatedai-train-gate = "train_gate_from_tuning_artifact:main"
chelatedai-synthetic-collapse = "synthetic_collapse_benchmark:main"
chelatedai-learned-mask-smoke = "learned_mask_policy:main"
chelatedai-research-pathways = "research_pathway_analyzer:main"
chelatedai-static-mask-probe = "static_mask_probe:main"
chelatedai-safety-testbed = "run_safety_testbed:main"

[project.optional-dependencies]
benchmark = ["mteb>=1.0"]
ollama = ["requests>=2.28"]
dev = ["ruff>=0.4", "httpx>=0.27"]

[tool.setuptools]
py-modules = [
    "aep_orchestrator",
    "antigravity_engine",
    "adapter_router",
    "benchmark_comparative",
    "benchmark_distillation",
    "benchmark_evolution",
    "benchmark_multitask",
    "benchmark_rlm",
    "benchmark_utils",
    "checkpoint_manager",
    "chelation_adapter",
    "chelation_logger",
    "config",
    "convergence_monitor",
    "dashboard_server",
    "dimension_mask_predictor",
    "device_profiles",
    "distributed_fitness_evaluator",
    "embedding_backend",
    "embedding_quality",
    "elite_archive",
    "evolution_strategies_optimizer",
    "fitness_interfaces",
    "online_updater",
    "quantization_promotion_gate",
    "query_reformulator",
    "recursive_decomposer",
    "reproducibility_context",
    "run_live_fire_diagnostics",
    "run_road_course_campaign",
    "run_road_course_tuning_loop",
    "run_thousand_query_tuning",
    "train_gate_from_tuning_artifact",
    "synthetic_collapse_benchmark",
    "learned_mask_policy",
    "research_pathway_analyzer",
    "static_mask_probe",
    "run_safety_testbed",
    "sedimentation",
    "sedimentation_trainer",
    "self_healing_chelation",
    "stability_tracker",
    "structural_health_score",
    "retrieval_fitness_evaluator",
    "teacher_distillation",
    "teacher_weight_scheduler",
    "vector_store",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "W291", "W293", "W292"]
